tui/tests/snapshots/view_snapshots__markdown_rich_dark.snap
---
source: tui/tests/view_snapshots.rs
expression: "markdown_style_preview(Theme::Dark)"
---
"# " <fg=Some(Rgb(72, 202, 228)) bg=None +BOLD | UNDERLINED -NONE> | "Delivery" <fg=Some(Rgb(72, 202, 228)) bg=None +BOLD | UNDERLINED -NONE>
"outer " <fg=Some(Rgb(232, 235, 242)) bg=None +BOLD -NONE> | "inner" <fg=Some(Rgb(232, 235, 242)) bg=None +BOLD | ITALIC -NONE> | " tail" <fg=Some(Rgb(232, 235, 242)) bg=None +BOLD -NONE>
"3. " <fg=Some(Rgb(72, 202, 228)) bg=None +BOLD -NONE> | "inspect" <fg=Some(Rgb(232, 235, 242)) bg=None +NONE -NONE>
"4. " <fg=Some(Rgb(72, 202, 228)) bg=None +BOLD -NONE> | "ship" <fg=Some(Rgb(232, 235, 242)) bg=None +NONE -NONE>
"Guide" <fg=Some(Rgb(72, 202, 228)) bg=None +BOLD | UNDERLINED -NONE> | " (" <fg=Some(Rgb(126, 134, 151)) bg=None +NONE -NONE> | "https://garive.local/guide" <fg=Some(Rgb(72, 202, 228)) bg=None +BOLD | UNDERLINED -NONE> | ")" <fg=Some(Rgb(126, 134, 151)) bg=None +NONE -NONE>
"" <fg=Some(Rgb(232, 235, 242)) bg=None +BOLD -NONE> | "Surface" <fg=Some(Rgb(232, 235, 242)) bg=None +BOLD -NONE> | "" <fg=Some(Rgb(232, 235, 242)) bg=None +BOLD -NONE> | " │ " <fg=Some(Rgb(126, 134, 151)) bg=None +NONE -NONE> | "" <fg=Some(Rgb(232, 235, 242)) bg=None +BOLD -NONE> | "State" <fg=Some(Rgb(232, 235, 242)) bg=None +BOLD -NONE> | "" <fg=Some(Rgb(232, 235, 242)) bg=None +BOLD -NONE>
"────────┼──────" <fg=Some(Rgb(72, 202, 228)) bg=None +BOLD -NONE>
"" <fg=Some(Rgb(232, 235, 242)) bg=None +NONE -NONE> | "macOS" <fg=Some(Rgb(232, 235, 242)) bg=None +NONE -NONE> | "  " <fg=Some(Rgb(232, 235, 242)) bg=None +NONE -NONE> | " │ " <fg=Some(Rgb(126, 134, 151)) bg=None +NONE -NONE> | "" <fg=Some(Rgb(232, 235, 242)) bg=None +NONE -NONE> | "ready" <fg=Some(Rgb(232, 235, 242)) bg=None +BOLD -NONE> | "" <fg=Some(Rgb(232, 235, 242)) bg=None +NONE -NONE>
"" <fg=Some(Rgb(232, 235, 242)) bg=None +NONE -NONE> | "Other" <fg=Some(Rgb(232, 235, 242)) bg=None +NONE -NONE> | "  " <fg=Some(Rgb(232, 235, 242)) bg=None +NONE -NONE> | " │ " <fg=Some(Rgb(126, 134, 151)) bg=None +NONE -NONE> | "" <fg=Some(Rgb(232, 235, 242)) bg=None +NONE -NONE> | "later" <fg=Some(Rgb(232, 235, 242)) bg=None +NONE -NONE> | "" <fg=Some(Rgb(232, 235, 242)) bg=None +NONE -NONE>
"╭─ CODE" <fg=Some(Rgb(72, 202, 228)) bg=None +BOLD -NONE> | " · " <fg=Some(Rgb(126, 134, 151)) bg=None +NONE -NONE> | "rust" <fg=Some(Rgb(72, 202, 228)) bg=None +BOLD -NONE>
"│ " <fg=Some(Rgb(126, 134, 151)) bg=None +NONE -NONE> | "fn" <fg=Some(Rgb(189, 147, 249)) bg=None +BOLD -NONE> | " " <fg=Some(Rgb(232, 235, 242)) bg=None +NONE -NONE> | "main" <fg=Some(Rgb(189, 147, 249)) bg=None +BOLD -NONE> | "(" <fg=Some(Rgb(126, 134, 151)) bg=None +NONE -NONE> | ")" <fg=Some(Rgb(126, 134, 151)) bg=None +NONE -NONE> | " " <fg=Some(Rgb(232, 235, 242)) bg=None +NONE -NONE> | "{" <fg=Some(Rgb(126, 134, 151)) bg=None +NONE -NONE> | "}" <fg=Some(Rgb(126, 134, 151)) bg=None +NONE -NONE>
"╰─" <fg=Some(Rgb(126, 134, 151)) bg=None +NONE -NONE>
