tui/tests/snapshots/view_snapshots__motion_running_dark_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "motion_frame(&model, Theme::Dark, 4, 100, 24)"
---

› Summarize the release plan.

• Completed
  └ Read file

## Release plan

  • Verify the Runtime
  • Ship with evidence

  cargo test passes.







◦ Working…  ·  esc to interrupt

› Ask a follow-up…

                                                                                         Session 1
