tui/tests/snapshots/view_snapshots__motion_running_light_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "motion_frame(&model, Theme::Light, 4, 100, 24)"
---

  › Summarize the release plan.
    ✓  Agent action · completed
  • ## Release plan

    • Verify the Runtime
    • Ship with evidence

    cargo test passes.












● Working… ·  Esc interrupt
› Ask a follow-up…
