tui/tests/snapshots/view_snapshots__motion_running_mono_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "motion_frame(&model, Theme::Mono, 4, 100, 24)"
---
  Session 1  ·  Agent                                                              ● Agent running

    › Summarize the release plan.
      ✓  Agent action · completed
    ◆ Garive
      ## Release plan
      • Verify the Runtime
      • Ship with evidence
      cargo test passes.











  ╭ › ───────────────────────────────────────────────────────────────────────────────────────────╮
  │ Ask a follow-up…                                                                             │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯
    Esc cancel run
