tui/tests/snapshots/view_snapshots__recovery_unknown_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&recovery, Theme::Dark, 100, 24)"
---

› Summarize the release plan.

• Completed
  └ Read file

## Release plan

  • Verify the Runtime
  • Ship with evidence

  cargo test passes.





 Command result unknown ────────────────────────────────────────────────────────────────────────────
×  A prior command has an unknown durable outcome. Review Host truth before retrying.

  Enter exact retry   A abandon local record
• Working…
› Ask a follow-up…
